@@ -3,5 +3,9 @@ This tool only convert temperature from Celsius to Fahrenheit.
 # To run this tool
 - Step 1: Download as it in your computer.
 - Step 2: Open "Project Structure" in IDE from 'File Menu'.
-- Step 3: Go to "libraries" option and click on 'java' option appears on clicking to plus icon(+) add "JAVA SDK PATH".
-- Step 4:
+- Step 3: Go to "libraries" option and click on 'java' option appears on clicking to plus icon(+) add "JAVA SDK PATH", then save it by OK
+- Step 4: Then go to 'Run Menu' and click on "Edit Configurations..".
+- Step 5: Check your java file selected or not make sure it is selected and open 'Modify Option' and check-mark on "Add VM Opotions".
+- Step 6: Now the new option appears in the Edit Configurations.. tab by 'VM Options' here paste below given directory, then save it by OK
+- Step 7: Then run the program, now your program running successfully
+- Note: These all steps for Intellji IDEA only, this is for VM Options directory: --module-path "\path\to\javafx-sdk-18.0.2\lib" --add-modules javafx.controls,javafx.fxml . Replace this \path\to\javafx-sdk-18.0.2\lib by your Javafx-sdk direcroty wheare your save your SDK folder.
